--- a/src/styles/sidenav-expanded.styl
+++ b/src/styles/sidenav-expanded.styl
@@ -6,6 +6,7 @@
 
 .sidenav.expanded {
     width: 300px;
+    min-width: 300px;
     box-shadow: 1px 0 20px -1px #9999;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -100,6 +101,7 @@
           padding: 7px 14px 7px 20px;
           line-height: 28px;
           font-size: 14px;
+          white-space: nowrap;
           background: #F8F8F9;
           outline: none;
       }
