--- a/src/styles/sidenav.styl
+++ b/src/styles/sidenav.styl
@@ -5,6 +5,7 @@
     left: 0;
     z-index: 1006;
     width: 64px;
+    min-width 64px;
     background: #FFFFFF;
     box-shadow: 1px 0 20px -1px rgba(153,153,153,0.6);
     transition: all 0.2s ease-in-out;
